RESOLVED FIXED 182954
Copying a list from Microsoft Word to TinyMCE fails when mso-list is on tags other than P
https://bugs.webkit.org/show_bug.cgi?id=182954
Summary Copying a list from Microsoft Word to TinyMCE fails when mso-list is on tags ...
Andrew Herron
Reported 2018-02-19 21:44:24 PST
Created attachment 334241 [details] Document with heading lists See https://bugs.webkit.org/show_bug.cgi?id=182564#c51 When a heading tag (H1-H6) has an mso-list CSS property on it, the workaround fails as it explicitly checks for P tags. After pasting the attached document, there is one P tag with list styles but every other list item is a heading. The headings do not retain their mso-list CSS properties.
Attachments
Document with heading lists (32.31 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-02-19 21:44 PST, Andrew Herron
no flags
Fixes the bug (60.29 KB, patch)
2018-03-29 19:53 PDT, Ryosuke Niwa
no flags
Radar WebKit Bug Importer
Comment 1 2018-02-20 10:51:29 PST
Ryosuke Niwa
Comment 2 2018-03-29 19:53:24 PDT
Created attachment 336834 [details] Fixes the bug
WebKit Commit Bot
Comment 3 2018-03-29 22:33:22 PDT
Comment on attachment 336834 [details] Fixes the bug Clearing flags on attachment: 336834 Committed r230099: <https://trac.webkit.org/changeset/230099>
WebKit Commit Bot
Comment 4 2018-03-29 22:33:24 PDT
All reviewed patches have been landed. Closing bug.
Andrew Herron
Comment 5 2018-04-03 00:48:34 PDT
I have just downloaded r230195 and confirmed that this seems to fix pasting for the relevant documents in our test suite. Thanks :D
Note You need to log in before you can comment on or make changes to this bug.