Copying a list from Microsoft Word to TinyMCE fails when mso-list is on tags other than P https://bugs.webkit.org/show_bug.cgi?id=182954 <rdar://problem/37713141>

Reviewed by Wenson Hsieh.

Source/WebCore:

Fixed the bug by relaxing the restriction that we only preserve mso-list on p.

Tests: PasteHTML.PreservesMSOListOnH4

* editing/markup.cpp:
(WebCore::StyledMarkupAccumulator::shouldPreserveMSOListStyleForElement):

Tools:

Added a test case for a HTML generated by Microsoft Word which sets mso-list on h4.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/PasteHTML.mm:
* TestWebKitAPI/Tests/WebKitCocoa/mso-list-compat-mode.html: Fixed the file path.
* TestWebKitAPI/Tests/WebKitCocoa/mso-list-on-h4.html: Added.


Canonical link: https://commits.webkit.org/199727@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230099 268f45cc-cd09-0410-ab3c-d52691b4dbfc